<resources>
    <string name="app_name">공동육아</string>
    <string name="CheckUnit">필수항목을 입력바랍니다.</string>
    <string name="no">아니요</string>
    <string name="email">이메일</string>
    <string name="name">이름</string>
    <string name="hint_name">이름</string>
    <string name="birthday">생년월일</string>
    <string name="hint_birthday">생년월일</string>
    <string name="tel">휴대폰번호</string>
    <string name="sex">성별</string>
    <string name="txCustomerinfo">내 정보</string>
    <string name="btn_save">저장하기</string>
    <string name="address">우번번호로 주소찾기</string>
    <string name="hint_address_detail">상세주소</string>
    <string name="passwordmng">비밀번호관리</string>
    <string name="oldpassword">현재비밀번호를 입력하세요</string>
    <string name="newpassword">새 비밀번호를 입력하세요</string>
    <string name="btn_save_password">비밀번호변경</string>
    <string name="RegisterNewMember">환영합니다. 이메일로 로그인 해보세요.</string>
    <string name="txPassword">비밀번호관리</string>
    <string name="save">처리되었습니다.</string>
    <string name="parent_yes">관계끊기</string>
    <string name="requestbaby">최초 아이 등록자가 아래 경로에서 등록</string>
    <string name="requestbabypath">( 마이페이지 - 보호자명단 )</string>


    <!-- TODO: Remove or change this placeholder text -->

    <string name="logout">로그아웃</string>
    <string name="record">기록하기</string>
    <string name="chart">통계</string>
    <string name="title_record">기록하기</string>
    <string name="mybabyinfo">아기정보</string>
    <string name="date">날짜</string>
    <string name="time">시간</string>

    <string name="mothermilk">모유수유(분)</string>
    <string name="milk">분유(ml)</string>
    <string name="rice">이유식(ml)</string>
    <string name="mothermilk_img">[img src=ic_breast/] 모유수유(분)</string>
    <string name="milk_img">[img src=ic_baby_bottle/] 분유(ml)</string>
    <string name="rice_img">[img src=ic_meal/] 이유식(ml)</string>

    <string name="remain_contents">남기고싶은말</string>
    <string name="baby_picture">아기사진을 올려주세요</string>
    <string name="home">홈</string>
    <string name="author">작성자</string>
    <string name="comments">설명</string>
    <string name="btn_cancel">취소하기</string>
    <string name="cancel">취소</string>
    <string name="btn_delete">삭제하기</string>
    <string name="deleteAlert">삭제를 하시겠습니까?</string>
    <string name="invite">보호자 초대하기</string>
    <string name="invitation">보호자 초대</string>
    <string name="parentlist">보호자 명단</string>
    <string name="letsEmail">이메일주소를 입력하세요</string>
    <string name="letsTel">연락처를 입력하세요</string>
    <string name="message_duplicate_user">이미 보호자로 등록되어 있습니다</string>
    <string name="message_confirm_delete">삭제</string>
    <string name="message_confirm_delete_parents">관계를 끊으시겠습니까?</string>
    <string name="message_warnning_register_baby">아이 등록 후 사용 가능합니다.</string>
    <string name="mainTarget">기록 대상 아기</string>
    <string name="signin">회원가입</string>
    <string name="title_activity_signup">회원가입</string>
    <string name="login">로그인</string>
    <string name="find_password">비밀번호찾기</string>
    <string name="create_Account">가입하기</string>
    <string name="Already_a_member">이미 회원가입이 되어 있습니까?</string>
    <string name="confirm">비밀번호 보내기</string>
    <string name="password">비밀번호</string>

    <string name="btn_update">수정하기</string>
    <string name="milk_list">분유</string>
    <string name="rice_list">이유식</string>
    <string name="mothermilk_list">수유</string>
    <string name="mypage">마이페이지</string>
    <string name="update">수정하기</string>

    <string name="chartTitle">우리아기식사량</string>
    <string name="chartTitle1">수유시간</string>
    <string name="chartTitle2">분유/이유식</string>
    <string name="logout_message">로그아웃하시겠습니까?</string>
    <string name="message_updated">수정되었습니다.</string>
    <string name="message_OK">확인</string>
    <string name="message_confirm_password_count">자릿수가 최소 5자리이상만 가능합니다.</string>
    <string name="nomember">등록되지 않은 메일주소입니다.</string>
    <string name="QnA">Q&amp;A</string>
    <string name="subtitle">태어난 지</string>
    <string name="subtitle1">일 째</string>
    <string name="subtitle2">개월 지났습니다. (</string>
    <string name="day">일 )</string>
    <string name="milk_unit">(ml)</string>
    <string name="mothermilk_unit">(분)</string>
    <string name="rice_unit">(mg)</string>
    <string name="upload_picture">사진을 올려주세요</string>
    <string name="contents">내용을 입력해 주세요</string>
    <string name="review">리뷰쓰기</string>
    <string name="send_ask">문의하신 내용이 메일로 전달되었습니다 빠른 답변 드리겠습니다.</string>
    <string name="message_network_problem">네트워크에 문제가 있습니다 잠시 후 다시 실행해 주세요</string>
    <string name="message_confirm_id_password">아이디(이메일) 또는 비밀번호를 틀렸습니다.</string>
    <string name="received_email">답변받을 이메일주소</string>
    <string name="shortcut_text1">잘먹었어요</string>
    <string name="shortcut_text2">겨우먹였어요</string>
    <string name="shortcut_text3">잘안먹어요</string>
    <string name="shortcut_text4">다남기네요</string>
    <string name="shortcut_text5">맛이없나?</string>
    <string name="add_comment">멘트 추가(최대 5개)</string>
    <string name="add_comment_desc">멘트를 길게 누르면 삭제됩니다.</string>
    <string name="add_comment_btn">멘트추가</string>


    <!--//oauth -->
    <string name="autologin">자동로그인</string>
    <string name="already_baby">이미 등록된 아이가 있다면?</string>
    <string name="talklist">Q&amp;A</string>
    <string name="talkdescription">신규기능요구 및 에러 등</string>
    <string name="register">등록</string>
    <string name="message_title">제목을 입력하세요</string>
    <string name="message_contents">내용을 입력하세요</string>
    <string name="now">방금</string>
    <string name="reply_comment">댓글을 남겨주세요</string>
    <string name="delete">삭제하기</string>
    <string name="rereply">대댓글 달기</string>
    <string name="lastest">최근</string>
    <string name="choicebabypicture">아기사진선택</string>
    <string name="choicepicture">사진선택</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <!--<string name="messages_header">Messages</string>-->
    <string name="record_item">기록항목</string>

    <!-- Messages Preferences -->
    <!--<string name="signature_title">Your signature</string>-->
    <!--<string name="reply_title">Default reply action</string>-->

    <!-- Sync Preferences -->
    <string name="mothermilk_on">수유시간을 기록합니다. </string>
    <string name="mothermilk_off">수유시간을 기록하지 않습니다.</string>
    <string name="milk_on">분유량을 기록합니다. </string>
    <string name="milk_off">분유량을 기록하지 않습니다. </string>
    <string name="rice_on">이유식양을 기록합니다. </string>
    <string name="rice_off">이유식양을 기록하지 않습니다. </string>

    <string name="settings">기록항목 등 설정</string>

</resources>
