<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.company.jk.pcoordinator.mypage.MypageFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                        <Button
                            android:id="@+id/btn_myinfo"
                            android:text="@string/txCustomerinfo"
                            style="@style/Mypagebutton"/>
                        <Button
                            android:id="@+id/btn_mybabyinfo"
                            android:text="@string/mybabyinfo"
                            style="@style/Mypagebutton"/>
                        <Button
                            android:id="@+id/btn_password"
                            android:text="@string/txPassword"
                            style="@style/Mypagebutton"/>
                        <Button
                            android:id="@+id/btn_Logout"
                            android:text="@string/logout"
                            style="@style/Mypagebutton"/>
                </LinearLayout>

        </ScrollView>
</LinearLayout>

