<?xml version="1.0" encoding="utf-8"?>
    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/lab3_appbar"
            android:layout_width="match_parent"
            android:layout_height="242dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/lab3_collapsing"
                android:layout_width="match_parent"
                android:layout_height="242dp"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginBottom="50dp"
                app:expandedTitleMarginStart="32dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="@string/app_name">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/lab3_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_margin="8dp"
                    app:layout_collapseMode="pin"/>

                <ImageView
                    android:id="@+id/appbar_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/appbar_image"
                    app:layout_collapseMode="parallax" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <TableRow>
                <TextView
                    android:text="@string/date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_weight="1"/>

                <TextView
                    android:text="@string/time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_weight="1"/>

                <TextView
                    android:text="@string/milk"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_weight="1"/>

                <TextView
                    android:text="@string/rice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_weight="1"/>

                <TextView
                    android:text="@string/author"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_weight="2"/>

                <TextView
                    android:text="@string/comments"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_weight="3"/>
            </TableRow>

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ListView
                        android:id="@+id/listView_main"
                        android:divider="#dcdcda"
                        android:dividerHeight="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>



            </ScrollView>

        </TableLayout>

    </android.support.design.widget.CoordinatorLayout>

