<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/app_margin_left"
        android:layout_marginRight="@dimen/app_margin_right"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingTop="56dp">

        <com.company.jk.pcoordinator.common.customview.Textview_ygotjalnanfont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:textSize="20dp"/>
            <!--android:textColor="@color/TitleTextColorinWhiteBackground"-->


        <!-- Name Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--  Email Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- mobile number -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/input_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tel"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />


            </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Re-enter Label -->
        <!--<com.google.android.material.textfield.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="8dp">-->

            <!--<EditText-->
                <!--android:id="@+id/input_reEnterPassword"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:hint="@string/repassword"-->
                <!--android:inputType="textPassword" />-->
        <!--</com.google.android.material.textfield.TextInputLayout>-->

        <!-- Signup Button -->
        <Button
            android:id="@+id/btn_signup"
            style="@style/MyWideButton"
            android:layout_width="match_parent"
            android:onClick="OnClickMethod"
            android:text="@string/create_Account"  />

        <TextView
            android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:onClick="OnClickMethod"
            android:text="@string/Already_a_member"
            android:textColor="@color/black"
            android:textSize="16dip" />

    </LinearLayout>
</ScrollView>