<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!-- 툴바, 추가된 소스 -->
    <include layout="@layout/layout_toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/app_margin_left"
            android:layout_marginRight="@dimen/app_margin_right"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/date"/>

                <TextView
                    style="@style/TextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/time" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/EditText"
                    android:id="@+id/tv_date"
                    android:editable="false"
                    android:focusable="false"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />

                <EditText
                    style="@style/EditText"
                    android:id="@+id/tv_time"
                    android:editable="false"
                    android:focusable="false"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />
            </LinearLayout>

            <com.company.jk.pcoordinator.common.customview.TextViewWithImages
                style="@style/TextView"
                android:id="@+id/tx_mothermilk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mothermilk_img" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    style="@style/EditText"
                    android:id="@+id/et_mothermilk"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:textAlignment="center"
                    android:text="0" />

                <Button
                    android:text="5"
                    android:id="@+id/btn_mothermilk_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/btn_number_style"
                    android:drawableLeft="@drawable/ic_baseline_arrow_upward_24px"/>

                <Button
                    android:id="@+id/btn_mothermilk_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/btn_number_style"
                    android:drawableLeft="@drawable/ic_baseline_arrow_downward_24px"
                    android:layout_marginLeft="5dp"
                    android:text="5"/>
            </LinearLayout>

            <com.company.jk.pcoordinator.common.customview.TextViewWithImages
                style="@style/TextView"
                android:id="@+id/tx_milk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/milk_img" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    style="@style/EditText"
                    android:id="@+id/et_milk"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:inputType="number"
                    android:imeOptions="actionDone"

                    android:textAlignment="center"
                    android:text="0" />

                <Button
                    android:id="@+id/btn_milk_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/btn_number_style"
                    android:drawableLeft="@drawable/ic_baseline_arrow_upward_24px"
                    android:layout_marginBottom="10dp"
                    android:paddingBottom="0dp"
                    android:text="10"/>

                <Button
                    android:id="@+id/btn_milk_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/btn_number_style"
                    android:drawableLeft="@drawable/ic_baseline_arrow_downward_24px"
                    android:layout_marginLeft="5dp"
                    android:text="10"/>
            </LinearLayout>


            <com.company.jk.pcoordinator.common.customview.TextViewWithImages
                style="@style/TextView"
                android:id="@+id/tx_rice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rice_img" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    style="@style/EditText"
                    android:id="@+id/et_rice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:textAlignment="center"
                    android:text="0" />

                <Button
                    android:id="@+id/btn_rice_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/btn_number_style"
                    android:drawableLeft="@drawable/ic_baseline_arrow_upward_24px"
                    android:layout_marginLeft="5dp"
                    android:text="10"/>

                <Button
                    android:id="@+id/btn_rice_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/btn_number_style"
                    android:drawableLeft="@drawable/ic_baseline_arrow_downward_24px"
                    android:layout_marginLeft="5dp"
                    android:text="10"/>
            </LinearLayout>

            <EditText
                style="@style/EditText"
                android:id="@+id/et_remain_contents"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="text"
                android:hint="@string/remain_contents"/>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none">
                <LinearLayout
                    android:id="@+id/layout_shortcut"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/shortcut1"
                        android:text="@string/shortcut_text1"
                        style="@style/shortcut"/>
                    <Button
                        android:id="@+id/shortcut2"
                        android:text="@string/shortcut_text2"
                        style="@style/shortcut"/>
                    <Button
                        android:id="@+id/shortcut3"
                        android:text="@string/shortcut_text3"
                        style="@style/shortcut"/>
                    <Button
                        android:id="@+id/shortcut4"
                        android:text="@string/shortcut_text4"
                        style="@style/shortcut"/>
                    <Button
                        android:id="@+id/shortcut5"
                        android:text="@string/shortcut_text5"
                        style="@style/shortcut"/>
                    <Button
                        android:id="@+id/shortcutplus"
                        android:text=" + "
                        style="@style/shortcutstyle"/>
                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:id="@+id/record_activity"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_delete"
                    style="@style/MyWideButton"
                    android:text="@string/btn_delete"
                    android:textColor="@color/buttonColorPressed"
                    android:background="@drawable/button_bg_transparent"/>

                <Button
                    android:id="@+id/btn_save"
                    style="@style/MyWideButton"
                    android:background="@drawable/button_bg"
                    android:layout_marginLeft="3dp"
                    android:text="@string/btn_update" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>