<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_login"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/app_margin_left"
        android:layout_marginRight="@dimen/app_margin_right"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingTop="56dp">

        <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="100dp"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginBottom="12dp"-->
            <!--android:src="@drawable/baby"/>-->

        <com.company.jk.pcoordinator.common.customview.Textview_nanumsquareeb
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20dp"
            android:textColor="@color/white"/>

        <!--  Email Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/white">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--  Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/white"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:inputType="textPassword" />

           <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autologin"
                android:textColor="@color/white"
                android:background="@drawable/checkbox_background"
               android:buttonTint="@color/white"
                android:id="@+id/cb_Auto"
                android:checked="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="40dp"
            android:padding="12dp"
            android:background="@drawable/button_bg"
            android:textColor="@color/buttonTextColor"
            android:onClick="OnClickMethod"
            android:text="@string/login" />


        <!--<com.facebook.login.widget.LoginButton-->
            <!--android:id="@+id/login_button"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:padding="12dp"-->
            <!--android:layout_marginTop="30dp"-->
            <!--android:layout_marginBottom="30dp" />-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:background="@drawable/button_bg_transparent"
            android:textColor="@color/buttonColor"
            android:onClick="OnClickMethod"
            android:text="@string/signin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"/>

            <TextView
                android:id="@+id/find_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="7dp"
                android:onClick="OnClickMethod"
                android:textColor="@color/buttonTextColor"
                android:text="@string/find_password"
                android:textSize="12dp" />
            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>